--- a/CBI/cutadapt/module.lua.tmpl
+++ b/CBI/cutadapt/module.lua.tmpl
@@ -13,6 +13,11 @@ Examples: `cutadapt --version` and `cutadapt --help`.
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
+-- Specific to the Linux distribution?
+if string.match(myFileName(), "/_" .. os.getenv("CBI_LINUX") .. "/") then
+  root = pathJoin(root, "_" .. os.getenv("CBI_LINUX"))
+end
+
 local home = pathJoin(root, name .. "-" .. version)
 prepend_path("PATH", pathJoin(home, "bin"))
 
