--- a/CBI/jq/module.lua.tmpl
+++ b/CBI/jq/module.lua.tmpl
@@ -7,7 +7,7 @@ local version = myModuleVersion()
 version = string.gsub(version, "^[.]", "") -- for hidden modules
 whatis("Version: " .. version)
 whatis("Keywords: utility, cli")
-whatis("URL: https://github.com/stedolan/jq, https://github.com/stedolan/jq/blob/master/NEWS (changelog), https://stedolan.github.io/jq (documentation)")
+whatis("URL: https://github.com/jqlang/jq, https://github.com/jqlang/jq/blob/master/NEWS.md (changelog), https://jqlang.github.io/jq (documentation)")
 whatis([[
 Description: jq is a lightweight and flexible command-line JSON processor.
 Examples: `jq --help`, `jq --version`, `cat in.json | jq .`, and `man jq`
