--- a/CBI/asciigenome/module.lua.tmpl
+++ b/CBI/asciigenome/module.lua.tmpl
@@ -9,7 +9,8 @@ whatis("Keywords: sequencing, viewer, cli, tui")
 whatis("URL: https://github.com/dariober/ASCIIGenome, https://github.com/dariober/ASCIIGenome/blob/master/CHANGELOG.md (changelog), https://asciigenome.readthedocs.io/en/latest/ (documentation)")
 whatis([[
 Description: ASCIIGenome is a genome browser based on command line interface and designed for running from console terminals. Since ASCIIGenome does not require a graphical interface it is particularly useful for quickly visualizing genomic data on remote servers while offering flexibility similar to popular GUI viewers like IGV.
-Examples: `ASCIIGenome --help`.
+Examples: `ASCIIGenome --help`, and `ASCIIGenome bigWigExample.bw`.
+Warning: Only the most recent version of this software will be kept.
 ]])
 -- too long for small screens: `ASCIIGenome http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/release/20130502/supporting/functional_annotation/filtered/ALL.chr21.phase3_shapeit2_mvncall_integrated_v5.20130502.sites.annotation.vcf.gz`
 
