miniconda3-py39: Avoid dynamic content in whatis()

--- a/CBI/miniconda3-py39/module.lua.tmpl
+++ b/CBI/miniconda3-py39/module.lua.tmpl
@@ -10,7 +10,7 @@ local new = "miniconda3/" .. version .. "-py39"
 whatis("Version: " .. version)
 whatis("Keywords: deprecated, defunct")
 whatis([[
-Warning: This module is defunct and has been superseeded by module ' .. new .. '. Please use that module instead.
+Warning: This module is defunct and has been superseeded by module 'miniconda3'. Please use that module instead.
 ]])
 
 depends_on(new)
