--- a/CBI/jags/module.lua.tmpl
+++ b/CBI/jags/module.lua.tmpl
@@ -13,6 +13,12 @@ Examples: `jags` and `man jags`.
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
+
+-- Specific to the Linux distribution?
+if string.match(myFileName(), "/_" .. os.getenv("CBI_LINUX") .. "/") then
+  root = pathJoin(root, "_" .. os.getenv("CBI_LINUX"))
+end
+
 local home = pathJoin(root, "JAGS" .. "-" .. version)
 
 prepend_path("PATH", pathJoin(home, "bin"))
