--- a/CBI/github-cli/module.lua.tmpl
+++ b/CBI/github-cli/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: utility, file viewer, cli, tui")
 whatis("URL: https://cli.github.com/, https://cli.github.com/manual/ (documentation), https://github.com/cli/cli/releases (changelog), https://github.com/cli/cli/ (source code)")
 whatis([[
 Description: `gh` is GitHub on the command line. It brings pull requests, issues, and other GitHub concepts to the terminal next to where you are already working with `git` and your code.
-Examples: `gh --version` and `gh --help`.
+Examples: `gh --version`, `gh --help`, and `gh auth login`.
 Warning: Only the most recent version of this software will be kept.
 ]])
 
