NEWS -> NEWS.md

--- a/CBI/samtools/module.lua.tmpl
+++ b/CBI/samtools/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: sequencing")
-whatis("URL: https://www.htslib.org/, https://github.com/samtools/samtools/blob/develop/NEWS (changelog), https://github.com/samtools/samtools (source code)")
+whatis("URL: https://www.htslib.org/, https://github.com/samtools/samtools/blob/develop/NEWS.md (changelog), https://github.com/samtools/samtools (source code)")
 whatis([[
 Description: SAMtools is a suite of programs for interacting with high-throughput sequencing data.
 Examples: `samtools --version`.
