fclones: fix types on module description

--- a/CBI/fclones/module.lua.tmpl
+++ b/CBI/fclones/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: utility, cli, files")
 whatis("URL: https://github.com/pkolaczk/fclones, https://github.com/pkolaczk/fclones/releases (releases), https://docs.rs/fclones/latest/fclones/ (Rust API documentation)")
 whatis([[
 Description: 'fclones' is a command line utility that identifies groups of identical files and gets rid of the file copies you no longer need. It comes with plenty of configuration options for controlling the search scope and offers many ways of removing duplicates.
-Examples: `fclones --version`, `fclones --help`, and `fclones group . --threads main:1`, fclones group . --depth 1 --threads main:1).
+Examples: `fclones --version`, `fclones --help`, `fclones group . --threads main:1`, and `fclones group . --depth 1 --threads main:1`.
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
