Add advanced 'ncdu' example

--- a/CBI/ncdu/module.lua.tmpl
+++ b/CBI/ncdu/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: utility, cli, files")
 whatis("URL: https://dev.yorhel.nl/ncdu, https://dev.yorhel.nl/ncdu/man2 (documentation), https://dev.yorhel.nl/ncdu/changes2 (changelog), https://code.blicky.net/yorhel/ncdu/ (source code)")
 whatis([[
 Description: Ncdu is a disk usage analyzer with an ncurses interface. It is designed to find space hogs on a remote server where you don’t have an entire graphical setup available, but it is a useful tool even on regular desktop systems. Ncdu aims to be fast, simple and easy to use, and should be able to run in any minimal POSIX-like environment with ncurses installed.
-Examples: `ncdu --version`, `ncdu --help`, and `ncdu`).
+Examples: `ncdu --version`, `ncdu --help`, and `ncdu`. For large cleanup tasks, call `ncdu --one-file-system -o ncdu.cache` once to scan all files, and then use `ncdu --enable-delete -f ncdu.cache` to clean them out.
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
