--- a/CBI/snpeff/module.lua.tmpl
+++ b/CBI/snpeff/module.lua.tmpl
@@ -10,6 +10,7 @@ whatis("URL: https://pcingola.github.io/SnpEff/, https://github.com/pcingola/Snp
 whatis([[
 Description: SnpEff is a variant annotation and effect prediction tool. It annotates and predicts the effects of variants on genes (such as amino acid changes).
 Examples: `snpEff -help` and `SnpSift -help`, which are short for `java -jar $SNPEFF_HOME/snpEff/snpEff.jar -help` and `java -jar $SNPEFF_HOME/snpEff/SnpSift.jar -help`.  In SnpEff (< 5.0), there is also `ClinEff -help`, which is short for `java -jar $SNPEFF_HOME/ClinEff/ClinEff.jar -help`.
+Warning: SnpEff (>= 5.1) requires Java (>= 12).
 ]])
 
 local name = "snpEff"
