--- a/CBI/shellcheck-repl/module.lua.tmpl
+++ b/CBI/shellcheck-repl/module.lua.tmpl
@@ -15,6 +15,8 @@ Examples: `shellcheck-repl` to activate. To deactive, start a new shell. Then, i
 Warning: Only the most recent version of this software will be kept.
 ]])
 
+depends_on("shellcheck")
+
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
 local script = pathJoin(home, "shellcheck-repl.bash")
