glow: make 'man glow' work

--- a/CBI/glow/module.lua.tmpl
+++ b/CBI/glow/module.lua.tmpl
@@ -18,3 +18,4 @@ local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
 
 prepend_path("PATH", home)
+prepend_path("MANPATH", home)
