--- a/CBI/salmon/module.lua.tmpl
+++ b/CBI/salmon/module.lua.tmpl
@@ -10,7 +10,7 @@ whatis("URL: https://combine-lab.github.io/salmon/, https://salmon.readthedocs.i
 whatis([[
 Description: Highly-accurate & wicked fast transcript-level quantification from RNA-seq reads using selective alignment.
 Examples: `salmon --version`, `salmon --help`, and `salmon quant --threads=1 ...`.
-WARNING: This tool runs on all available CPU cores by default, which is bad practice. Please specify option `--threads=ncores` to avoid this, e.g. `--threads=1`.
+Warning: This tool runs on all available CPU cores by default, which is bad practice. Please specify option `--threads=ncores` to avoid this, e.g. `--threads=1`.
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
