--- a/CBI/miniconda3/module.lua.tmpl
+++ b/CBI/miniconda3/module.lua.tmpl
@@ -1,5 +1,5 @@
 help([[
-Miniconda: A Free Minimal Installer for Conda
+[DEPRECATED] Miniconda: A Free Minimal Installer for Conda
 ]])
 
 local warning = "Use at your own peril! Software tools installed via Conda are known to cause conflicts with other software on the system, including core software provided by the operating system as well as other software from the CBI stack. For example, do not install R packages running R from the CBI stack, while conda is activated."
@@ -13,7 +13,7 @@ whatis("URL: https://docs.conda.io/en/latest/, https://docs.conda.io/en/latest/m
 whatis([[
 Description: Miniconda is a free minimal installer for conda. It is a small, bootstrap version of Anaconda that includes only conda, Python, the packages they depend on, and a small number of other useful packages, including pip, zlib and a few others.
 Examples: `conda --version`, `conda create --name=myenv`, `conda env list`, `conda activate myenv`, `conda info`, and `conda deactive`.
-Warning: For now, this module works only in Bash. Also, do _not_ do `conda init`. If you do this by mistake, please undo by `conda init --reverse`.
+Warning: _This module is deprecated as of 2024-08-21, because of Anconda Inc. license issues. Please use the `miniforge3` module instead._ Also, this module works only in Bash. Also, do _not_ do `conda init`. If you do this by mistake, please undo by `conda init --reverse`.
 ]])
 
 
@@ -44,4 +44,12 @@ elseif mode() == "unload" then
   pushenv("_CE_M", "false")
   pushenv("_CE_CONDA", "false")
 end
+
+
+LmodWarning("[DEPRECATED] The CBI '" .. name .. "/" .. version .. "' module is deprecated as of 2024-08-21, and it will eventually become defunct. Please use 'miniforge3' instead. The reason for this is license issues introduced by Anconda Inc.")
+
+
+
+
+
 
