--- a/CBI/rstudio/module.lua.tmpl
+++ b/CBI/rstudio/module.lua.tmpl
@@ -11,7 +11,7 @@ whatis("URL: https://posit.co/products/open-source/rstudio/#rstudio-desktop, htt
 whatis([[
 Description: The RStudio Desktop is an integrated development environment (IDE) for R, a programming language for statistical computing and graphics.
 Examples: `rstudio`.  If you get a blank window, retry with `QMLSCENE_DEVICE=softwarecontext rstudio`.
-Warning: _This module is deprecates as of 2024-08-30 and no longer maintained; please use the 'rstudio-server' tool instead._ This software works only on the development nodes. It requires an SSH connection with X11 Forwarding enabled. It does _not_ work with X2Go (gives error \"GLX 1.3 or later is required\"). For best performance, use SSH compression when using X11 Forwarding, i.e. `ssh -X -C ...`.
+Warning: _This module is deprecated as of 2024-08-30 and no longer maintained; please use the 'rstudio-server' tool instead._ This software works only on the development nodes. It requires an SSH connection with X11 Forwarding enabled. It does _not_ work with X2Go (gives error \"GLX 1.3 or later is required\"). For best performance, use SSH compression when using X11 Forwarding, i.e. `ssh -X -C ...`.
 ]])
 
 depends_on("r")
