--- a/CBI/wynton-tools/module.lua.tmpl
+++ b/CBI/wynton-tools/module.lua.tmpl
@@ -10,7 +10,7 @@ whatis("URL: https://github.com/ucsf-wynton/wynton-tools, https://github.com/ucs
 whatis([[
 Description: The UCSF Wynton HPC Tools is a set of command-line tools that queries different aspects of the UCSF Wynton HPC environment.  These tools may be useful for systems administrators as well as end-users.
 Warning: This is work in development, which means that these tools may change, or even be removed, at anytime without notice.
-Examples: `wynton --help`, `trash --help`, and `x86-64-level --help`.
+Examples: `wynton --help` and `trash --help`.
 ]])
 
 if not isDir("/wynton") then
