star: add link to PDF manual

--- a/CBI/star/module.lua.tmpl
+++ b/CBI/star/module.lua.tmpl
@@ -4,7 +4,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: sequencing")
-whatis("URL: https://github.com/alexdobin/STAR, https://github.com/alexdobin/STAR/blob/master/CHANGES.md (changelog)")
+whatis("URL: https://github.com/alexdobin/STAR, https://raw.githubusercontent.com/alexdobin/STAR/master/doc/STARmanual.pdf (docs), https://github.com/alexdobin/STAR/blob/master/CHANGES.md (changelog)")
 whatis([[
 Description: STAR (Spliced Transcripts Alignment to a Reference) is a fast NGS read aligner for RNA-seq data.
 Examples: `STAR --help` and `STAR --version`.
