--- a/CBI/plink/module.lua.tmpl
+++ b/CBI/plink/module.lua.tmpl
@@ -10,6 +10,7 @@ whatis("URL: https://www.cog-genomics.org/plink/")
 whatis([[
 Description: PLINK is a free, open-source whole genome association analysis toolset, designed to perform a range of basic, large-scale analyses in a computationally efficient manner. The focus of PLINK is purely on analysis of genotype/phenotype data, so there is no support for steps prior to this (e.g. study design and planning, generating genotype or CNV calls from raw data).
 Examples: `plink --help` and `plink --version`.
+Warning: This tool runs on all available CPU cores by default, which is bad practice. Please specify option `--threads ncores` to avoid this, e.g. `--threads 1`.
 ]])
 
 -- Local variables
