--- a/CBI/ripgrep/module.lua.tmpl
+++ b/CBI/ripgrep/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: utility, files, search")
-whatis("URL: https://github.com/BurntSushi/ripgrep, https://github.com/BurntSushi/ripgrep/blob/master/CHANGELOG.md (changelog)")
+whatis("URL: https://github.com/BurntSushi/ripgrep, https://github.com/BurntSushi/ripgrep/blob/master/GUIDE.md (documentation), https://github.com/BurntSushi/ripgrep/blob/master/FAQ.md (FAQ), https://github.com/BurntSushi/ripgrep/blob/master/CHANGELOG.md (changelog)")
 whatis([[
 Description: ripgrep is a line-oriented search tool that recursively searches your current directory for a regex pattern. By default, ripgrep will respect your .gitignore and automatically skip hidden files/directories and binary files. ripgrep is similar to other popular search tools like The Silver Searcher, ack and grep.
 Examples: `rg --help`, `man rg`, and `rg -i 'lorem ipsum'`.
